Try to fix controls and bg on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,8 @@ body, html {
 @media (max-width: 768px) {
   .map-background {
       left: 5%;
+      height: 30vh;
+      top: 25%;
   }
 }
 
@@ -94,6 +96,10 @@ body, html {
   .banner-swipe {
     font-size: 0.9rem;
   }
+
+  .controls {
+      margin-bottom: 4rem;
+  }
 }
 
 .caption-banner h2 {
@@ -106,6 +112,7 @@ body, html {
   font-style: italic;
   font-size: 1rem;
   line-height: 1.4;
+  z-index: 4;
 }
 
 .controls {
